# JeevanSetu

./: .gitignore  README.md
hospital/: README.md  pyproject.toml  synthetic_hospital_data.csv
hospital/resources/forecasts/: epidemic_surveillance.md  festival_surge_forecast.md  pollution_health_risk.md
hospital/resources/plans/: supply_chain_inventory.md
hospital/src/hospital/: __init__.py  app.py  crew.py  estimated_patient_data.txt  main.py  test_agent.py  test_inventory.py
hospital/src/hospital/config/: agents.yaml  tasks.yaml
hospital/src/hospital/resources/data/: epidemic_data.csv  festival_admissions.csv  inventory_data.csv  pollution_health_data.csv  staffing_data.csv
hospital/src/hospital/resources/forecasts/: epidemic_surveillance.md  festival_surge_forecast.md  pollution_health_risk.md
hospital/src/hospital/resources/plans/: staffing_optimization.md
