[project]
name = "hospital"
version = "0.1.0"
description = "hospital using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.165.1,<1.0.0"
]

[project.scripts]
hospital = "hospital.main:run"
run_crew = "hospital.main:run"
train = "hospital.main:train"
replay = "hospital.main:replay"
test = "hospital.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
